--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <!--<button class="btn btn-primary" type="button" onclick='getPlayers()'>Get Players</button>-->
     </div>
     <script src="stats.js"></script>
-    <script src="test.js"></script>
+    <script src="api.js"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
 </body>
 
