--- a/stats.html
+++ b/stats.html
@@ -46,7 +46,7 @@
     </div>
   </div>
 
-    <script src="test.js"></script>
+    <script src="api.js"></script>
     <script src="stats.js"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
 </body>
