Updated function names and added scripts

--- a/index.html
+++ b/index.html
@@ -32,14 +32,16 @@
             <input class="form-control" type="text" id="input" value="" placeholder="Search"></input>
         </div>
         <div>
-            <button class="btn btn-primary" type="button" onclick='getParticipantsStatsByMatchID()'>Get Match Stats</button>
+            <button class="btn btn-primary" type="button" onclick='getMatchDataById()'>Get Match Stats</button>
             <button class="btn btn-primary" type="button" onclick='getListOfMatchIds()'>Get Match Ids</button>
             <button class="btn btn-primary" type="button" onclick='getListOfMatches()'>Get Matches</button>
         </div>
         <!--<button class="btn btn-primary" type="button" onclick='getPlayers()'>Get Players</button>-->
     </div>
+    <script src="config.js"></script>
     <script src="stats.js"></script>
     <script src="api.js"></script>
+    <script src="data.js"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
 </body>
 
